improve fixed gallery etc on mobile

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -123,9 +123,11 @@ ul {
   }
   p {
     margin-bottom: 1rem;
+    line-height: 1.4;
     &.lead {
       font-size: 1.2rem;
       margin-bottom: 1rem;
+      line-height: 1.3;
     }
   }
   section {
